# 512_BigBucks_Proj_Pkg

./: LICENSE  README.md  pyproject.toml  setup.cfg
src/: bigbucks_db.py
src/bigbucks_db.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_bigbucks_db.py
