[build-system]
requires = ["setuptools>=61.0",
    "wheel",
    "pandas",
    "requests",
    "pendulum",
    "yfinance"
]
build-backend = "setuptools.build_meta"


[project]
name = "bigbucks_db"
version = "0.0.4"
authors = [
  { name="Jeff Duan", email="jeffduan19@gmail.com" },
]
description = "This is for FINTECH 512 Group Project Backend Supabase Database"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/codemakerss/512_BigBucks_Proj_Pkg"
"Bug Tracker" = "https://github.com/codemakerss/512_BigBucks_Proj_Pkg/issues"